correction des titres, remplacement des p par h1,h2,h3.

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -40,7 +40,7 @@
             </div>
             <div class="card-menu ">
               <div class="card-menu__restaurant  ">
-                <p class="card-menu__heading">La note enchantée</p>
+                <h1 class="card-menu__heading">La note enchantée</h1>
                 <div class="card-menu__icons">
                   <i class="far fa-heart heart-icon  card-menu__icon"></i>
                   <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
@@ -48,10 +48,10 @@
               </div>
               <div class="card-menu__dishes-wrapper">
                 <article class="card-menu__dishes">
-                  <p class="card-menu__text">ENTREES</p>
+                  <h2 class="card-menu__text">ENTREES</h2>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Ravioles de foie gras</h2>
+                      <h3 class="card-menu__recipe-heading">Ravioles de foie gras</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Accompagnés de leur crème à la truffe</p>
                         <span class="card-menu__price">25€</span>
@@ -61,7 +61,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Caviar osciètre</h2>
+                      <h3 class="card-menu__recipe-heading">Caviar osciètre</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Sur blini à la farine de blé noir</p>
                         <span class="card-menu__price">35€</span>
@@ -71,7 +71,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class= "card-menu__recipe-heading">Homard et espuma de potiron</h2>
+                      <h3 class= "card-menu__recipe-heading">Homard et espuma de potiron</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Mariné aux zestes d'orange</p>
                         <span class="card-menu__price">20€</span>
@@ -81,7 +81,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class= "card-menu__recipe-heading">Foie gras de canard cuit entier</h2>
+                      <h3 class= "card-menu__recipe-heading">Foie gras de canard cuit entier</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">MConfiture de figue et pain toasté</p>
                         <span class="card-menu__price">35€</span>
@@ -91,10 +91,10 @@
                   </div>
                 </article>
                 <article class="card-menu__dishes">
-                  <p class="card-menu__text">PLATS</p>
+                  <h2 class="card-menu__text">PLATS</h2>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Noix de coquilles Saint-Jacques</h2>
+                      <h3 class="card-menu__recipe-heading">Noix de coquilles Saint-Jacques</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Sur lit de purée de céleri-rave</p>
                         <span class="card-menu__price">40€</span>
@@ -104,7 +104,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Langoustine poêlée</h2>
+                      <h3 class="card-menu__recipe-heading">Langoustine poêlée</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Purée de patate douce</p>
                         <span class="card-menu__price">35€</span>
@@ -114,7 +114,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Mijoté de queue de boeuf</h2>
+                      <h3 class="card-menu__recipe-heading">Mijoté de queue de boeuf</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Et riz sauvage aux zestes de citron</p>
                         <span class="card-menu__price">44€</span>
@@ -127,7 +127,7 @@
                   <p class="card-menu__text">DESSERTS</p>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Macaron noisette et chocolat</h2>
+                      <h3 class="card-menu__recipe-heading">Macaron noisette et chocolat</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Glace au caramel brun et sel de Guérande</p>
                         <span class="card-menu__price">18€</span>
@@ -137,7 +137,7 @@
                   </div>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Baba au rhum revisité</h2>
+                      <h3 class="card-menu__recipe-heading">Baba au rhum revisité</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Avec son coulis de citron</p>
                         <span class="card-menu__price">22€</span>
@@ -147,7 +147,7 @@
                   </div>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Tarte au citron meringuée</h2>
+                      <h3 class="card-menu__recipe-heading">Tarte au citron meringuée</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Déstructurée</p>
                         <span class="card-menu__price">23€</span>
