--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -40,7 +40,7 @@
             </div>
             <div class="card-menu ">
               <div class="card-menu__restaurant  ">
-                <p class="card-menu__heading">Le delice des sens</p>
+                <h1 class="card-menu__heading">Le delice des sens</h1>
                 <div class="card-menu__icons">
                   <i class="far fa-heart heart-icon  card-menu__icon"></i>
                   <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
