--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -40,7 +40,7 @@
             </div>
             <div class="card-menu ">
               <div class="card-menu__restaurant  ">
-                <p class="card-menu__heading">A la francaise</p>
+                <h1 class="card-menu__heading">A la francaise</h1>
                 <div class="card-menu__icons">
                   <i class="far fa-heart heart-icon  card-menu__icon"></i>
                   <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
@@ -48,10 +48,10 @@
               </div>
               <div class="card-menu__dishes-wrapper">
                 <article class="card-menu__dishes">
-                  <p class="card-menu__text">ENTREES</p>
+                  <h2 class="card-menu__text">ENTREES</h2>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Tartare de poulpe acidulé</h2>
+                      <h3 class="card-menu__recipe-heading">Tartare de poulpe acidulé</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Aux zestes d'orange</p>
                         <span class="card-menu__price">25€</span>
@@ -61,7 +61,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Velouté de légumes d'antan</h2>
+                      <h3 class="card-menu__recipe-heading">Velouté de légumes d'antan</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Carotte, panais, topinambour</p>
                         <span class="card-menu__price">35€</span>
@@ -71,7 +71,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class= "card-menu__recipe-heading">Soupe à l'oignon</h2>
+                      <h3 class= "card-menu__recipe-heading">Soupe à l'oignon</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Revisitée</p>
                         <span class="card-menu__price">20€</span>
@@ -81,10 +81,10 @@
                   </div>
                 </article>
                 <article class="card-menu__dishes">
-                  <p class="card-menu__text">PLATS</p>
+                  <h2 class="card-menu__text">PLATS</h2>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Coquilles Saint-Jacques</h2>
+                      <h3 class="card-menu__recipe-heading">Coquilles Saint-Jacques</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Accompagnées d'une purée de panais</p>
                         <span class="card-menu__price">40€</span>
@@ -94,7 +94,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Magret de canard</h2>
+                      <h3 class="card-menu__recipe-heading">Magret de canard</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Et parmentier de pommes de terre</p>
                         <span class="card-menu__price">35€</span>
@@ -104,7 +104,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Pigeonneau d’Ille-et-Vilaine</h2>
+                      <h3 class="card-menu__recipe-heading">Pigeonneau d’Ille-et-Vilaine</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Sur son lit de gnocchis aux légumes</p>
                         <span class="card-menu__price">44€</span>
@@ -114,10 +114,10 @@
                   </div>
                 </article>
                 <article class="card-menu__dishes">
-                  <p class="card-menu__text">DESSERTS</p>
+                  <h2 class="card-menu__text">DESSERTS</h2>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Pétales de violettes glacés</h2>
+                      <h3 class="card-menu__recipe-heading">Pétales de violettes glacés</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Et purée de noisettes</p>
                         <span class="card-menu__price">18€</span>
@@ -127,7 +127,7 @@
                   </div>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Fondant au chocolat</h2>
+                      <h3 class="card-menu__recipe-heading">Fondant au chocolat</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Revisité</p>
                         <span class="card-menu__price">22€</span>
@@ -137,7 +137,7 @@
                   </div>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Millefeuille croustillant</h2>
+                      <h3 class="card-menu__recipe-heading">Millefeuille croustillant</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Myrtilles et pâte d’amande</p>
                         <span class="card-menu__price">23€</span>
