--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -40,7 +40,7 @@
             </div>
             <div class="card-menu ">
               <div class="card-menu__restaurant  ">
-                <p class="card-menu__heading">La palette du goût</p>
+                <h1 class="card-menu__heading">La palette du goût</h1>
                 <div class="card-menu__icons">
                   <i class="far fa-heart heart-icon  card-menu__icon"></i>
                   <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
@@ -48,10 +48,10 @@
               </div>
               <div class="card-menu__dishes-wrapper">
                 <article class="card-menu__dishes">
-                  <p class="card-menu__text">ENTREES</p>
+                  <h2 class="card-menu__text">ENTREES</h2>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Fricassée d'escargot</h2>
+                      <h3 class="card-menu__recipe-heading">Fricassée d'escargot</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Au piment d'espelette</p>
                         <span class="card-menu__price">25€</span>
@@ -61,7 +61,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Foie gras de canard mi-cuit</h2>
+                      <h3 class="card-menu__recipe-heading">Foie gras de canard mi-cuit</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Et ses copeaux de truffe noire</p>
                         <span class="card-menu__price">35€</span>
@@ -71,7 +71,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class= "card-menu__recipe-heading">Oeuf au plat</h2>
+                      <h3 class= "card-menu__recipe-heading">Oeuf au plat</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Assaisonné à la truffe sur lit de caviar</p>
                         <span class="card-menu__price">20€</span>
@@ -84,7 +84,7 @@
                   <p class="card-menu__text">PLATS</p>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Filet de boeuf aux herbes</h2>
+                      <h3 class="card-menu__recipe-heading">Filet de boeuf aux herbes</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Accompagné de sa ribambelle de légumes</p>
                         <span class="card-menu__price">40€</span>
@@ -94,7 +94,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Parmentier de queue de boeuf</h2>
+                      <h3 class="card-menu__recipe-heading">Parmentier de queue de boeuf</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">À la truffe noire sur sa purée de panais</p>
                         <span class="card-menu__price">35€</span>
@@ -104,7 +104,7 @@
                   </div>
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Filet de turbot</h2>
+                      <h3 class="card-menu__recipe-heading">Filet de turbot</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Aux agrumes</p>
                         <span class="card-menu__price">44€</span>
@@ -117,7 +117,7 @@
                   <p class="card-menu__text">DESSERTS</p>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Paris-Brest</h2>
+                      <h3 class="card-menu__recipe-heading">Paris-Brest</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Revisité</p>
                         <span class="card-menu__price">18€</span>
@@ -127,7 +127,7 @@
                   </div>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Macaron au chocolat d'exception</h2>
+                      <h3 class="card-menu__recipe-heading">Macaron au chocolat d'exception</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Et glace à la vanille de Madagascar</p>
                         <span class="card-menu__price">22€</span>
@@ -137,7 +137,7 @@
                   </div>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
-                      <h2 class="card-menu__recipe-heading">Mousse au chocolat</h2>
+                      <h3 class="card-menu__recipe-heading">Mousse au chocolat</h3>
                       <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Au piment d'Espelette et à la truffe noire</p>
                         <span class="card-menu__price">23€</span>
