correction animation du coeur de la carte

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -52,7 +52,7 @@
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
                       <h3 class="card-menu__recipe-heading">Fricassée d'escargot</h3>
-                      <div class="card-menu__recipe-price">
+                      <div class="card-menu__recipe-price red-b">
                         <p class="card-menu__recipe-text">Au piment d'espelette</p>
                         <span class="card-menu__price">25€</span>
                       </div>
@@ -72,7 +72,7 @@
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
                       <h3 class= "card-menu__recipe-heading">Oeuf au plat</h3>
-                      <div class="card-menu__recipe-price">
+                      <div class="card-menu__recipe-price red-b">
                         <p class="card-menu__recipe-text">Assaisonné à la truffe sur lit de caviar</p>
                         <span class="card-menu__price">20€</span>
                       </div>
@@ -81,7 +81,7 @@
                   </div>
                 </article>
                 <article class="card-menu__dishes">
-                  <p class="card-menu__text">PLATS</p>
+                  <h2 class="card-menu__text">PLATS</h2>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
                       <h3 class="card-menu__recipe-heading">Filet de boeuf aux herbes</h3>
@@ -114,7 +114,7 @@
                   </div>
                 </article>
                 <article class="card-menu__dishes">
-                  <p class="card-menu__text">DESSERTS</p>
+                  <h2 class="card-menu__text">DESSERTS</h2>
                   <div class="card-menu__recipe recipe ">
                     <div class="recipe__wrapper ">
                       <h3 class="card-menu__recipe-heading">Paris-Brest</h3>
