--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -52,7 +52,7 @@
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
                       <h3 class="card-menu__recipe-heading">Fricassée d'escargot</h3>
-                      <div class="card-menu__recipe-price red-b">
+                      <div class="card-menu__recipe-price ">
                         <p class="card-menu__recipe-text">Au piment d'espelette</p>
                         <span class="card-menu__price">25€</span>
                       </div>
@@ -72,7 +72,7 @@
                   <div class="card-menu__recipe recipe">
                     <div class="recipe__wrapper ">
                       <h3 class= "card-menu__recipe-heading">Oeuf au plat</h3>
-                      <div class="card-menu__recipe-price red-b">
+                      <div class="card-menu__recipe-price">
                         <p class="card-menu__recipe-text">Assaisonné à la truffe sur lit de caviar</p>
                         <span class="card-menu__price">20€</span>
                       </div>
