correction input de la class map

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="booking booking--dark">
               <div class="map">
                 <i class="fas fa-map-marker-alt map__icon"></i>
-                <p class="map__text">Paris, Belleville</p>
+                <input type="text" class="map__text" value="Paris, Belleville">
               </div>
             </div>
             <div class="search">
